// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Logo > renders the logo for authView location 1`] = `
"<div class="logoContainer large" data-test-id="n8n-logo">
  <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 202.69 74" class="logoText">
    <defs>
      <style>
        .cls-1 {
          fill: #fff
        }

        .cls-2 {
          fill: none;
          stroke: gold;
          stroke-linecap: round;
          stroke-linejoin: round;
          stroke-width: 4.52px
        }
      </style>
    </defs>
    <path d="M1 71.51V20.46h32.26v9.43H10.94v12.6h19.87v9.14h-19.8V71.5H1ZM37.89 71.51V19.38h9.58v52.13zM90.25 53.79c0 10.87-7.99 18.79-18.58 18.79s-18.58-7.92-18.58-18.79S61.08 35 71.67 35s18.58 7.85 18.58 18.79m-9.58 0c0-6.7-4.32-10.08-9-10.08s-9 3.38-9 10.08 4.32 10.08 9 10.08 9-3.38 9-10.08M125.06 36.08l7.63 22.83 6.55-22.83h9.5l-11.09 35.43h-9.58l-8.28-24.19-8.14 24.19h-9.72l-11.3-35.43h10.08l6.55 22.75 7.71-22.75h10.08Z" class="cls-1"></path>
    <rect width="40.69" height="40.69" x="157.27" y="5.07" class="cls-2" rx="4.52" ry="4.52"></rect>
    <path d="M175.36 18.64h9.04c2.5 0 4.52-2.02 4.52-4.52V5.07" class="cls-2"></path>
    <circle cx="170.84" cy="18.64" r="4.52" class="cls-2"></circle>
    <path d="M166.31 45.76v-9.04c0-2.5 2.02-4.52 4.52-4.52h9.04" class="cls-2"></path>
    <circle cx="184.4" cy="32.2" r="4.52" class="cls-2"></circle>
  </svg>
</div>"
`;

exports[`Logo > renders the logo for sidebar location when sidebar is collapsed 1`] = `
"<div class="logoContainer sidebar sidebarCollapsed" data-test-id="n8n-logo"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="29" fill="none" viewBox="0 0 76 46" class="logo">
    <path fill="#F9F9F9" d="M41.83 5.8h6.84l-9.51 34.41h-6.89L24.41 15.7l-7.86 24.51H9.56L0 5.8h7.09l6.31 23.68L21.02 5.8h6.94l7.67 23.78L41.84 5.8z"></path>
    <path fill="#FFD800" d="M73.16 20.78s-.04-.08-.08-.08c-5.42-.58-9.96-4.09-12-8.92-.55-1.3-.92-2.7-1.07-4.16 0 0-.04-.08-.08-.08s-.08.04-.08.08c-.16 1.46-.52 2.86-1.07 4.16-2.04 4.83-6.58 8.34-12 8.92 0 0-.08.04-.08.08s.04.08.08.08c5.42.58 9.96 4.09 12 8.92.55 1.3.92 2.7 1.07 4.16 0 .05.04.08.08.08s.08-.04.08-.08c.16-1.46.52-2.86 1.07-4.16 2.04-4.83 6.58-8.34 12-8.92 0 0 .08-.04.08-.08M73.57 10.6s0-.02-.02-.02a3.85 3.85 0 0 1-3.42-3.42c0-.01 0-.02-.02-.02s-.02 0-.02.02a3.85 3.85 0 0 1-3.42 3.42c-.01 0-.02 0-.02.02s0 .02.02.02a3.85 3.85 0 0 1 3.42 3.42s0 .02.02.02.02 0 .02-.02a3.85 3.85 0 0 1 3.42-3.42c.01 0 .02 0 .02-.02M76 32.64s-.02-.04-.04-.04a6.57 6.57 0 0 1-5.82-5.82c0-.02-.02-.04-.04-.04s-.04.02-.04.04a6.571 6.571 0 0 1-5.82 5.82c-.02 0-.04.02-.04.04s.02.04.04.04a6.57 6.57 0 0 1 5.82 5.82s.02.04.04.04.04-.02.04-.04a6.571 6.571 0 0 1 5.82-5.82c.02 0 .04-.02.04-.04"></path>
  </svg>
  <!--v-if-->
</div>"
`;

exports[`Logo > renders the logo for sidebar location when sidebar is expanded 1`] = `
"<div class="logoContainer sidebar sidebarExpanded" data-test-id="n8n-logo">
  <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 202.69 74" class="logoText">
    <defs>
      <style>
        .cls-1 {
          fill: #fff
        }

        .cls-2 {
          fill: none;
          stroke: gold;
          stroke-linecap: round;
          stroke-linejoin: round;
          stroke-width: 4.52px
        }
      </style>
    </defs>
    <path d="M1 71.51V20.46h32.26v9.43H10.94v12.6h19.87v9.14h-19.8V71.5H1ZM37.89 71.51V19.38h9.58v52.13zM90.25 53.79c0 10.87-7.99 18.79-18.58 18.79s-18.58-7.92-18.58-18.79S61.08 35 71.67 35s18.58 7.85 18.58 18.79m-9.58 0c0-6.7-4.32-10.08-9-10.08s-9 3.38-9 10.08 4.32 10.08 9 10.08 9-3.38 9-10.08M125.06 36.08l7.63 22.83 6.55-22.83h9.5l-11.09 35.43h-9.58l-8.28-24.19-8.14 24.19h-9.72l-11.3-35.43h10.08l6.55 22.75 7.71-22.75h10.08Z" class="cls-1"></path>
    <rect width="40.69" height="40.69" x="157.27" y="5.07" class="cls-2" rx="4.52" ry="4.52"></rect>
    <path d="M175.36 18.64h9.04c2.5 0 4.52-2.02 4.52-4.52V5.07" class="cls-2"></path>
    <circle cx="170.84" cy="18.64" r="4.52" class="cls-2"></circle>
    <path d="M166.31 45.76v-9.04c0-2.5 2.02-4.52 4.52-4.52h9.04" class="cls-2"></path>
    <circle cx="184.4" cy="32.2" r="4.52" class="cls-2"></circle>
  </svg>
</div>"
`;
